# QGraphicsBug

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: ImageViewer.h  MainWindow.h  MyRectItem.h
src/: ImageViewer.cpp  MainWindow.cpp  MyRectItem.cpp
